tests/feature_tests/snapshots/e2e__feature_tests__basic_with_shims__PowerShell.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"

---
$ErrorActionPreference = "Stop"
fnm env --with-shims | Out-String | Invoke-Expression
fnm install v8.11.3
fnm use v8.11.3
If ("$(node -v)" -ne "v8.11.3") {
    Write-Output ('Expected Node version to be "v8.11.3", Got: ' + $(node -v))
    exit 1
}
