tests/feature_tests/snapshots/e2e__feature_tests__basic_with_shims__Zsh.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"

---
set -e
eval "$(fnm env --with-shims)"
fnm install v8.11.3
fnm use v8.11.3
if [ "$(node -v)" != "v8.11.3" ]; then
    echo 'Expected Node version to be "v8.11.3", Got: '"$(node -v)"
    exit 1
fi
